# EmuGBoy

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-multi-platform.yml
include/: gb.h  mbc.h  ppu.h  sm83.h  timer.h  utils.h
src/: CMakeLists.txt  gb.cpp  main.cpp  mbc.cpp  ppu.cpp  sm83.cpp  timer.cpp  utils.cpp
